fix: Block navigation when click icons on the result with coupang click wrap

--- a/src/components/NavigationBar/index.module.css
+++ b/src/components/NavigationBar/index.module.css
@@ -120,6 +120,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
+  cursor: pointer;
 }
 
 .menuWrap > ul {
@@ -245,4 +246,8 @@
   width: 60px;
   height: 40px;
   margin-left: 30px;
+}
+
+.cursorPointer {
+  cursor: default;
 }
